[package]
name = "gulf-shield"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Window", "console"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
